exercises/macros/tests/invalid/only-comma.stderr
error: no rules expected the token `,`
 --> $DIR/only-comma.rs:5:14
  |
5 |     hashmap!(,);
  |              ^ no rules expected this token in macro call
